# capsuletech

./: .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  CLAUDE.md  README.md  biome.json  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  tsconfig.base.json
.claude/: launch.json
.claude/agents/: POLICY.md  app.md  controller.md  docs-writer.md  entity.md  feature.md  owner-builders.md  owner-canvas.md  owner-cli.md  owner-desktop.md  owner-scriber.md  owner-shared.md  owner-web-core.md  owner-web-profiler.md  owner-web-remote.md  owner-web-renderer.md  owner-web-router.md  owner-web-state.md  page.md  shape.md  ui-component.md  view.md  widget.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  desktop-release.yml  pr-title.yml  release.yml
.husky/: pre-commit
apps/agent/: package.json  project.json  tsconfig.json
apps/agent/.capsule/: app-config.gen.ts  index.ts  tsconfig.paths.json
apps/agent/.capsule/@types/: capsule-imports.d.ts
apps/agent/.capsule/routes/: index.tsx  routeTree.gen.ts
apps/agent/.capsule/routes/chat/: route.tsx
apps/agent/.capsule/routes/lab/: route.tsx
apps/agent/src/controllers/models/: picker.tsx
apps/agent/src/entities/models/: picker.tsx
apps/agent/src/features/models/: picker.tsx
apps/agent/src/pages/chat/: index.tsx
apps/agent/src/widgets/chat/: main.tsx
apps/capsule-space/: README.md  capsule.config.ts  package.json
apps/capsule-space/src/controllers/: windowControls.ts
apps/capsule-space/src/features/: desktop.ts
apps/capsule-space/src/pages/: welcome.tsx
apps/capsule-space/src/shapes/navigation/: routes.tsx
apps/capsule-space/src/widgets/: welcome.tsx
apps/capsule-space/src/widgets/layout/: header.tsx  windowControls.tsx
apps/ewc/: capsule.app.ts  capsule.config.ts  package.json  tsconfig.json
apps/ewc/.capsule/: app-config.gen.ts  tsconfig.paths.json
apps/ewc/.capsule/@types/: api.d.ts
apps/ewc/.capsule/routes/: welcome.tsx
apps/ewc/.capsule/routes/_auth/: login.tsx
apps/ewc/src/endpoints/: auth.ts  incidents.ts
apps/ewc/src/entities/: call.tsx  hello.tsx
apps/ewc/src/features/: auth.tsx  incidents.ts  workspace.tsx
apps/ewc/src/mocks/: calls.ts
apps/ewc/src/pages/_auth/: index.tsx
apps/ewc/src/pages/_public/: index.tsx  login.tsx  register.tsx
apps/ewc/src/pages/cards/: index.tsx
apps/ewc/src/pages/reports/: index.tsx
apps/ewc/src/pages/workspace/: index.tsx
apps/ewc/src/shapes/: callsTable.tsx  incidentPreview.tsx  navigation.tsx
apps/ewc/src/views/: authFormCard.tsx  markersList.tsx  sidebarInfo.tsx  workspaceHeader.tsx  workspaceMenu.tsx
apps/ewc/src/widgets/headers/: main.tsx
apps/ewc/src/widgets/maps/: world.tsx
apps/ewc/src/widgets/sidebars/: main.tsx
apps/sandbox/: package.json  project.json  tsconfig.json
apps/sandbox/.capsule/: app-config.gen.ts  bootstrap.tsx  index.ts  tsconfig.paths.json
apps/sandbox/.capsule/@types/: capsule-imports.d.ts  capsule.d.ts
apps/sandbox/.capsule/routes/: auth.tsx
backend/: .tmp-payload.json  Cargo.toml
backend/desktop/: .gitignore  Cargo.toml
backend/desktop/capabilities/: default.json
backend/desktop/src/: lib.rs  main.rs
backend/scriber/: OWNERSHIP.md
backend/scriber/core/: Cargo.toml
backend/scriber/core/src/: backend.rs  error.rs  lib.rs  tools.rs  types.rs
backend/scriber/mcp/: Cargo.toml
backend/scriber/mcp/src/: lib.rs
backend/scriber/native-tools/: Cargo.toml
backend/scriber/native-tools/src/: lib.rs
backend/scriber/ollama/: Cargo.toml
backend/scriber/ollama/src/: lib.rs  wire.rs
backend/scriber/server/: Cargo.toml
backend/scriber/server/src/: api.rs  error.rs  main.rs  state.rs
backend/scriber/tools/: Cargo.toml
backend/scriber/tools/src/: lib.rs
docs/: 00-index.md
docs/01-architecture/: golden-rules.md  layers.md  lifecycle.md  tagging-system.md
docs/01-architecture/adr/: 001-xstate-as-canonical-fsm.md  003-router-context-based.md  004-compliance-linter.md  005-tag-aliases-registry.md  007-uiproxy-cleanup.md  009-event-interception-extension.md  013-explicit-define-app-config.md  014-router-api-extension.md  015-remote-modules.md  016-matrix-v2-rows-engine.md  017-desktop-package.md  018-capsule-space-app.md  019-autoimport-dirs-drop.md  020-component-data-flow-split.md  021-uiproxy-auto-kind-tags.md  README.md
docs/04-features/: _template.md
docs/07-binding/: controller-proxy.md  overrides.md  shape.md  tag-registry.md  ui-proxy.md
docs/08-system/: auto-import.md  cli.md  desktop.md  git.md  releases.md  vite-plugins.md
docs/09-backend/: desktop.md
docs/09-packages/: api-middleware.md  compliance.md  core.md  profiler.md  router.md  state.md  style.md  ui.md
docs/09-packages/style/: theming.md
docs/09-packages/ui/primitives/: button.md
docs/_archive/: initial-brief.md
docs/_meta/: agents.md  anti-patterns.md  api-middleware.md  builders.md  cleanup-plan.md  cli.md  design-tokens.md  desktop.md  profiler.md  releases.md  web-core.md  web-map.md  web-router.md  web-state.md  web-style.md  web-ui.md
scripts/: README.md  audit-exports.mjs  desktop.mjs  dev-backend.mjs  feature-report.mjs  release-local.mjs  release.mjs
types/: capsule.d.ts
(+44 files in other folders)
