[workspace]
resolver = "2"
members = [
  "fs",
  "desktop",
  "scriber/ollama",
  "scriber/tools",
  "scriber/server",
]

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
