[workspace]
resolver = "2"
members = [
  "fs",
  "scriber/core",
  "scriber/ollama",
  "scriber/mcp",
  "scriber/native-tools",
  "scriber/server",
]

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
