[package]
name = "capsule-mcp"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
capsule-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
