[package]
name = "capsule-native-tools"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
capsule-core = { path = "../core" }
capsule-fs = { path = "../../fs" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
