[package]
name = "capsule-ollama"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
