[package]
name = "capsule-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "capsule-server"
path = "src/main.rs"

[dependencies]
capsule-ollama = { path = "../ollama" }
capsule-fs = { path = "../../fs" }
capsule-tools = { path = "../tools" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
