[package]
name = "capsule-server"
edition.workspace = true
version.workspace = true

[[bin]]
name = "capsule-server"
path = "src/main.rs"

[dependencies]
capsule-core = { path = "../core" }
capsule-ollama = { path = "../ollama" }
capsule-mcp = { path = "../mcp" }
capsule-native-tools = { path = "../native-tools" }
capsule-fs = { path = "../../fs" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }
async-stream = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
