[package]
name = "capsule-tools"
edition.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
capsule-fs = { path = "../../fs" }
capsule-ollama = { path = "../ollama" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
